Fix spacing on metamask instructions

--- a/src/components/MetaMaskInstructions.css
+++ b/src/components/MetaMaskInstructions.css
@@ -1,3 +1,6 @@
+.metamask-modal {
+  padding-bottom: 70px;
+}
 .metamask-modal h2 {
   margin: 75px 0 50px 0;
 }
@@ -6,7 +9,6 @@
 }
 .metamask-modal p.cta {
   text-align: center;
-  margin-bottom: 100px;
 }
 .metamask-modal .iframe-wrapper {
   margin: 50px;
